# GameEngine

./: .gitignore  CMakeLists.txt  README.md
include/GameEngine/Core/: FileSystem.h  Logger.h  Math.h  Memory.h
src/: Engine.h
src/Core/Math/: Matrix4.cpp  Vector2.cpp  Vector3.cpp
tests/: TestUtils.h
tests/Core/: test_filesystem.cpp  test_logger.cpp  test_math.cpp  test_memory.cpp
